Side Bar Fixing, Map Align, and Text Directions

--- a/src/main/resources/edu/wpi/teamname/stylesheets/Colors/lightTheme.css
+++ b/src/main/resources/edu/wpi/teamname/stylesheets/Colors/lightTheme.css
@@ -80,6 +80,13 @@
 .outline{
     -fx-border-color: #6F797A;
 }
+
+.separator *.line{
+    -fx-border-style: solid;
+    -fx-border-width: 1px;
+    -fx-border-color: #6F797A;
+}
+
 .primary-fixed-dim{
     -fx-background-color: #A7C8FF;
     -fx-text-fill: #001B3B;
